--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/juanexplosions-icon-color.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Juanexplosions</title>
-    <meta name="description" content="Juanexplosions: frontend developer and content creator" />
+    <meta name="description" content="Frontend developer and content creator" />
     <meta name="keywords" content="Juanexplosions, frontend, developer, content, creator" />
     <meta name="author" content="Juanexplosions" />
     <meta property="og:title" content="Juanexplosions" />
-    <meta property="og:description" content="Juanexplosions: frontend developer and content creator" />
+    <meta property="og:description" content="Frontend developer and content creator" />
     <meta property="og:image" content="/open-graph.jpg" />
     <meta property="og:url" content="https://juanexplosions.com/" />
     <meta property="og:type" content="website" />
